changed testing data

--- a/solutions/selectPdf/selectPdf.css
+++ b/solutions/selectPdf/selectPdf.css
@@ -7,7 +7,7 @@ It could be done in jQuery, but CSS has a few advantages:
    4. It doesn't require any extras on the page
 
 Tested in
-IE 7-8
+IE
 Chrome
 Firefox
 Safari
